--- a/package.json
+++ b/package.json
@@ -2,10 +2,23 @@
   "name": "nerouter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=html --reporter=text mocha",
+    "coverage": "npm install coveralls --save-dev",
+    "prepublish": "webpack"
   },
   "author": "leeluolee",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-loader": "^7.1.4",
+    "expect.js": "^0.3.1",
+    "webpack": "^4.1.1"
+  },
+  "devDependencies": {
+    "coveralls": "^3.0.0",
+    "mocha": "^5.0.4",
+    "nyc": "^11.6.0",
+    "webpack-cli": "^2.0.12"
+  }
 }
