--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "nerouter",
+  "name": "path-to-tree",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
+  "description": "high performance alternative for path-to-regexp to create routing lib",
+  "main": "lib/index.js",
+  "keywords": [
+    "path-to-regexp",
+    "router",
+    "route",
+    "routing",
+    "koa",
+    "express"
+  ],
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
     "coverage": "npm install coveralls --save-dev",
-    "prepublish": "webpack"
+    "prepublish": "webpack",
+    "dev": "webpack -w"
   },
   "author": "leeluolee",
   "license": "MIT",
-  "dependencies": {
-    "babel-loader": "^7.1.4",
-    "expect.js": "^0.3.1",
-    "webpack": "^4.1.1"
-  },
   "devDependencies": {
+    "connect": "^3.6.6",
     "coveralls": "^3.0.0",
+    "expect.js": "^0.3.1",
+    "koa": "^2.7.0",
     "mocha": "^5.0.4",
     "nyc": "^11.6.0",
-    "webpack-cli": "^2.0.12"
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leeluolee/path-to-tree.git"
   }
 }
