--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   ],
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
-    "coverage": "npm install coveralls --save-dev",
+    "coverage": "nyc --reporter=text-lcov | coveralls",
     "prepublish": "webpack",
     "dev": "webpack -w"
   },
   "author": "leeluolee",
   "license": "MIT",
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "connect": "^3.6.6",
     "coveralls": "^3.0.0",
     "expect.js": "^0.3.1",
     "koa": "^2.7.0",
     "mocha": "^5.0.4",
     "nyc": "^11.6.0",
+    "path-to-regexp": "^3.0.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   },
